--- a/app/globals.css
+++ b/app/globals.css
@@ -4,24 +4,25 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 7px !important;
+  height: 7px !important;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #888;
-  border-radius: 1px;
+  background: #000 !important;
+  border-radius: 10px !important;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #000;
-  border-radius: 1px;
+  background: #eee !important;
+  border-radius: 10px !important;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #eee;
+  background: #10b981 !important;
 }
 
 @layer base {
