--- a/app/globals.css
+++ b/app/globals.css
@@ -1,140 +1,82 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
-/* width */
-::-webkit-scrollbar {
-  width: 7px !important;
-  height: 7px !important;
+/* @plugin 'tailwindcss-animate'; */
+@plugin 'tailwind-scrollbar';
+
+@variant dark (&:is(.dark *));
+
+@theme {
+  /* add lightmode colors here */
+  --color-background: var(--color-slate-50);
+  --color-foreground: var(--color-slate-950);
+
+  --color-primary: var(--color-slate-950);
+  --color-primary-foreground: var(--color-gray-50);
+  
+  --color-popover: var(--color-slate-950);
+  --color-popover-foreground: var(--color-white);
+
+  /* --color-card: hsl(var(--card));
+  --color-card-foreground: hsl(var(--card-foreground));
+  */
+
+  /*
+  --color-secondary: hsl(var(--secondary));
+  --color-secondary-foreground: hsl(var(--secondary-foreground));
+
+  --color-muted: hsl(var(--muted));
+  --color-muted-foreground: hsl(var(--muted-foreground));
+
+  --color-accent: hsl(var(--accent));
+  --color-accent-foreground: hsl(var(--accent-foreground)); */
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #000 !important;
-  border-radius: 10px !important;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #eee !important;
-  border-radius: 10px !important;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #10b981 !important;
-}
-
-@layer base {
-  :root {
-
-    --background: 0 0% 100%;
-
-    --foreground: 0 0% 3.9%;
-
-    --card: 0 0% 100%;
-
-    --card-foreground: 0 0% 3.9%;
-
-    --popover: 0 0% 100%;
-
-    --popover-foreground: 0 0% 3.9%;
-
-    --primary: 0 0% 9%;
-
-    --primary-foreground: 0 0% 98%;
-
-    --secondary: 0 0% 96.1%;
-
-    --secondary-foreground: 0 0% 9%;
-
-    --muted: 0 0% 96.1%;
-
-    --muted-foreground: 0 0% 45.1%;
-
-    --accent: 0 0% 96.1%;
-
-    --accent-foreground: 0 0% 9%;
-
-    --destructive: 0 84.2% 60.2%;
-
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 0 0% 89.8%;
-
-    --input: 0 0% 89.8%;
-
-    --ring: 0 0% 3.9%;
-
-    --chart-1: 12 76% 61%;
-
-    --chart-2: 173 58% 39%;
-
-    --chart-3: 197 37% 24%;
-
-    --chart-4: 43 74% 66%;
-
-    --chart-5: 27 87% 67%;
-
-    --radius: 0.5rem
-  }
+@layer theme {
   .dark {
+    --color-background: var(--color-slate-950);
+    --color-foreground: var(--color-slate-50);
 
-    --background: 0 0% 3.9%;
+    --color-primary: var(--color-gray-50);
+    --color-primary-foreground: var(--color-slate-950);
 
-    --foreground: 0 0% 98%;
-
-    --card: 0 0% 3.9%;
-
-    --card-foreground: 0 0% 98%;
-
-    --popover: 0 0% 3.9%;
-
-    --popover-foreground: 0 0% 98%;
-
-    --primary: 0 0% 98%;
-
-    --primary-foreground: 0 0% 9%;
-
-    --secondary: 0 0% 14.9%;
-
-    --secondary-foreground: 0 0% 98%;
-
-    --muted: 0 0% 14.9%;
-
-    --muted-foreground: 0 0% 63.9%;
-
-    --accent: 0 0% 14.9%;
-
-    --accent-foreground: 0 0% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 0 0% 14.9%;
-
-    --input: 0 0% 14.9%;
-
-    --ring: 0 0% 83.1%;
-
-    --chart-1: 220 70% 50%;
-
-    --chart-2: 160 60% 45%;
-
-    --chart-3: 30 80% 55%;
-
-    --chart-4: 280 65% 60%;
-
-    --chart-5: 340 75% 55%
+    --color-popover-foreground: var(--color-slate-950);
+    --color-popover: var(--color-white);
+    
   }
 }
 
 @layer base {
-  * {
-    @apply border-border;
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-100, currentColor); /* default border color*/
   }
-  body {
-    @apply bg-background text-foreground;
+}
+
+
+@layer utilities {
+  /* width */
+  ::-webkit-scrollbar {
+    width: 7px !important;
+    height: 7px !important;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #000 !important;
+    border-radius: 10px !important;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #eee !important;
+    border-radius: 10px !important;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #10b981 !important;
   }
 }
