--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 /* @plugin 'tailwindcss-animate'; */
-@plugin 'tailwind-scrollbar';
+/* @plugin 'tailwind-scrollbar'; */
 
 @variant dark (&:is(.dark *));
 
@@ -19,6 +19,7 @@
   --color-border: var(--color-slate-950);
 
   --color-accent: var(--color-green-600);
+  --color-accent-foreground: var(--color-slate-950); /* variable not used yet*/
 
   --text-xxs: 0.65rem;
 
@@ -32,9 +33,7 @@
 
   --color-muted: hsl(var(--muted));
   --color-muted-foreground: hsl(var(--muted-foreground));
-
-  --color-accent: hsl(var(--accent));
-  --color-accent-foreground: hsl(var(--accent-foreground)); */
+ */
 }
 
 @layer theme {
@@ -49,6 +48,8 @@
     --color-popover: var(--color-white);
 
     --color-border: var(--color-slate-50);
+
+    --color-accent-foreground: var(--color-slate-50); /* variable not used yet*/
     
   }
 }
@@ -63,25 +64,22 @@
   }
 }
 
-/* width */
+
 ::-webkit-scrollbar {
-  width: 7px !important;
-  height: 7px !important;
+  width: 5px !important;
+  height: 5px !important;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
-  background: #000 !important;
+  background: var(--color-foreground) !important;
   border-radius: 10px !important;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #eee !important;
+  background: var(--color-accent) !important;
   border-radius: 10px !important;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #10b981 !important;
+  cursor: pointer;
 }
